# GenesisOs

./: .gitignore  Makefile  README.md  build.sh  iso.sh  qemu.sh
OS/: CMakeLists.txt  compile_commands.json
OS/App/: CMakeLists.txt
OS/App/include/: OSApp.h  OSLayer.h
OS/App/src/: main.cpp
OS/Engine/: CMakeLists.txt
OS/Engine/include/Core/: EntryPoint.h
OS/Engine/include/Debug/: Instrumentor.h
OS/Engine/include/Renderer/: Camera.h
OS/Engine/include/Scene/: Entity.h  Scene.h
OS/Engine/src/Core/: Application.cpp  Window.cpp
OS/Engine/src/Platfrom/OpenGl/: OpenGLContext.cpp  OpenGLFramebuffer.cpp
OS/Engine/src/Renderer/: Animation.cpp  EditorCamera.cpp  Renderer.cpp  Renderer3D.cpp  UniformBuffer.cpp
OS/Engine/src/Scene/: Scene.cpp  SceneSerializer.cpp
OS/Resources/Shaders/: shader.fs  shader.vs
OS/old/include/Core/: Application.h  Config.h  Layer.h  LayerStack.h  ResourceManager.h  Timestep.h  Window.h
OS/old/include/Platform/OpenGl/: OpenGLRendererAPI.h
OS/old/include/Renderer/: RendererAPI.h  Shader.h  Texture.h
OS/old/include/glad/: glad.h  gles2.h
OS/old/src/: Makefile  main.cpp
OS/old/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  ResourceManager.cpp  Window.cpp  stb_image.cpp
OS/old/src/Platform/OpenGl/: OpenGLRendererAPI.cpp
OS/old/src/Renderer/: RendererAPI.cpp  Shader.cpp  Texture.cpp
OS/old/src/lib/: glad.cpp
board/genesisos/: post-build.sh
configs/: genesis_config  genesisos_defconfig  mesa3d.mk
isodir/boot/: GenDevOs.kernel
isodir/boot/grub/: grub.cfg
kernel/: Makefile
kernel/arch/i386/: boot.S  crti.S  crtn.S  cursor.c  gdt.S  io.S  io.h  make.config  tty.c
kernel/include/: idt.h
kernel/include/kernel/: fs.h  multiboot.h  timer.h  tty.h
kernel/kernel/: fs.c  gdt.c  heap.c  idt.c  kernel.c  keyboard.c  memory.c  paging.c  timer.c
libc/include/: stdint.h  stdio.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c
libc/string/: strcmp.c
src/: config.h  kernel.c  kernel.h  status.h
src/boot/: boot.asm
src/disk/: disk.c  disk.h  streamer.c  streamer.h
src/fs/: file.c  file.h  pparser.c  pparser.h
src/fs/fat/: fat16.c  fat16.h
src/idt/: idt.asm  idt.c
src/memory/: memory.c
src/string/: string.c  string.h
(+62 files in other folders)
